traces/bug_676.txt
examples++-load/qf11to25.cpp:973: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of QuadratureFormular_Tet_P7 accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/qf11to25.cpp:973:1: initialization of QuadratureFormular_Tet_P7
971.   };
972.   
973. > PQF3 const QuadratureFormular_Tet_P7(7,35, QF_TET_P7);
974.   //  QUAD QUAD_3D_P8_ = { 46 184
975.   

examples++-load/qf11to25.cpp:973:12: call to Fem2D::GQuadratureFormular<Fem2D::R3>_GQuadratureFormular
971.   };
972.   
973.   PQF3 const QuadratureFormular_Tet_P7(7,35, QF_TET_P7);
                  ^
974.   //  QUAD QUAD_3D_P8_ = { 46 184
975.   

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R3>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
